<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/text"
                android:hint="@string/enter_text_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text" />
            <EditText
                android:id="@+id/from_lang"
                android:hint="@string/enter_from_language_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text" />
            <EditText
                android:id="@+id/to_lang"
                android:hint="@string/enter_to_language_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text" />
            <TextView
                android:text="@string/translated_text"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/translated_text"
                android:padding="10dp"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:minHeight="100dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnTranslate"
                android:text="@string/translate"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>